Increasing content response allowed from Elastic (#502)
* Increasing content response allowed from Elastic
https://github.com/gbif/occurrence/issues/501

* moving buffer request limit config to config file, using 200MB as default
https://github.com/gbif/occurrence/issues/501